--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
 html, body {
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 	overflow: hidden;
+	max-width: 960px;
 }
 
 .videogular-container {
-	padding-top: 10%;
-	width: 100%;
-	height: 320px;
+	padding: 10%;
+	width: 80%;
+	height: 80%;
 	margin: auto;
 	overflow: hidden;
 }
@@ -19,8 +20,6 @@ height: 20px;
 
 @media (min-width: 1200px) {
 	.videogular-container {
-		width: 1170px;
-		height: 658.125px;
 	}
 
 	.videogular-container.audio {
@@ -31,8 +30,7 @@ height: 20px;
 
 @media (min-width: 992px) and (max-width: 1199px) {
 	.videogular-container {
-		width: 940px;
-		height: 528.75px;
+
 	}
 
 	.videogular-container.audio {
@@ -43,8 +41,7 @@ height: 20px;
 
 @media (min-width: 768px) and (max-width: 991px) {
 	.videogular-container {
-		width: 728px;
-		height: 409.5px;
+
 	}
 
 	.videogular-container.audio {
