--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,14 @@ html, body {
 	overflow: hidden;
 	max-width: 960px;
 }
+.video-selector {
+	text-align: center;
+	padding-top: 200px;
+}
 
+h1 {
+	color: #0074ba;
+}
 .videogular-container {
 	padding: 10%;
 	width: 80%;
@@ -13,6 +20,19 @@ html, body {
 	overflow: hidden;
 }
 
+button {
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  background: #3498db;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+button:hover {
+  background: #3cb0fd;
+  text-decoration: none;
+}
 .my-button img {
 width: 100%;
 height: 20px;
